fixed the photo zooming in too much in the footer
fixed the photo zooming in too much in the footer

--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -658,8 +658,8 @@ aside.clients img {
 
 section#contact {
     background-color: #222;
-    background-image: url('{{ site.baseurl }}/img/IMG_1529.jpg');
-    background-position: center;
+    background-image: url('{{ site.baseurl }}/img/IMG_1620.jpg');
+    
     background-repeat: no-repeat;
 }
 
